--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     <title>Sal's 2 Kewl 4 Skewl Website</title>
 </head>
 
@@ -36,9 +37,9 @@
             </div>
         </div>
     </nav>
-    <div class="container dark">
+    <div class="container">
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide pb-1 border-bottom" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -69,17 +70,17 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="mt-4">
+        <div class="mt-4 pb-1 border-bottom">
             <div class="row">
-                <div class="col-md-4">
-                    <img class="img-fluid" src="https://animals.sandiegozoo.org/sites/default/files/2016-11/animals_hero_cobra.jpg" alt="" srcset="">
+                <div class="col-md-6">
+                    <img class="img-fluid cobra" src="https://animals.sandiegozoo.org/sites/default/files/2016-11/animals_hero_cobra.jpg" alt="" srcset="">
                 </div>
                 <div class="col-md-6">
                     <span class="sub-heading">Download Now</span>
                     <h1 class="display-4">
                         Download Our App Today
                     </h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, natus esse provident veritatis tempora ipsum quisquam ab modi! Assumenda quibusdam vitae aliquid facere inventore fuga voluptates qui magnam et repudiandae!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, natus esse provident veritatis tempora ipsum quisquam ab modi!</p>
                 </div>
             </div>
         </div>
