--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-md-6">
                     <img class="img-fluid cobra" src="https://animals.sandiegozoo.org/sites/default/files/2016-11/animals_hero_cobra.jpg" alt="" srcset="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mt-auto mb-auto">
                     <span class="sub-heading">Download Now</span>
                     <h1 class="display-4">
                         Download Our App Today
@@ -84,6 +84,21 @@
                 </div>
             </div>
         </div>
+        <div class="mt-4 pb-1 border-bottom">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid cobra" src="https://www.nps.gov/foma/learn/nature/images/Black-Racer-Upclose.jpg" alt="" srcset="">
+                </div>
+                <div class="col-md-8 mt-auto mb-auto">
+                    <span class="sub-heading">Download Now</span>
+                    <h1 class="display-4">
+                        Download Our App Today
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ea officia non consectetur iste cupiditate officiis quaerat reprehenderit consequatur, itaque reiciendis? Atque amet incidunt saepe consectetur quasi aliquam unde ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa amet dolores quas aliquid ut optio atque incidunt id aut iste mollitia voluptate rerum possimus voluptatem ducimus, laudantium vitae laboriosam. Excepturi.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
